# content-backend

./: .env.docker.example  .env.example  .gitignore  .secrets.baseline  .secrets.json  02_POST_TEMPLATE_LIBRARY.md  03_post_generator.py  BUG_VERIFICATION_REPORT.md  CLAUDE.md  Dockerfile  FEATURE_TODO.md  FIXTURE_CLEANUP_COMPLETE.md  INTEGRATION_TEST_FIXES.md  OPTIMIZATION_TESTING.md  PHASE_2_BACKEND_TESTING_PROGRESS.md  ROLLBACK_PLAN.md  ROUTER_TESTS_COMPLETION.md  SESSION_SUMMARY_2026-01-08.md  TESTING_DEPLOYMENT.md  TESTING_STATUS_SUMMARY.md  TEST_COVERAGE_ACHIEVED.md  TEST_COVERAGE_BOOST_SUMMARY.md  TEST_COVERAGE_PLAN_90_PERCENT.md  TEST_FIXES_PHASE1_COMPLETE.md  UNIT_TEST_COVERAGE_IMPROVEMENT.md  audit_tools.py  coverage-backend.json  coverage-unit.json  coverage.json  coverage_report.txt  create_unit_tests.py  determine_competitors_upgrade.patch  docker-compose.yml  fix_ts_final.py  fix_ts_v2.py  fix_typescript_strings.py  generate_openapi.py  init_db.py  mypy.ini  pyproject.toml  (+12 more)
agent/: core_enhanced.py  tools.py
backend/: benchmark_queries.py  config.py  database.py  generate_secret_key.py  main.py  requirements.txt  tmp_versions.py
backend/config/: credit_pricing.py
backend/database/: add_target_platform_migration.py
backend/deploy/: render.yaml
backend/middleware/: __init__.py  authorization.py  compression.py  csrf_protection.py  metrics.py  request_id.py  security_headers.py
backend/migrations/: __init__.py  add_pricing_breakdown.py  add_settings_table.py  add_story_template_columns.py  schema_mapping.json
backend/models/: __init__.py  brief_import.py  client.py  communication.py  credit.py  mixins.py  post.py  project.py  research_result.py  run.py  setting.py  story.py  stripe_payment.py  trends.py  user.py
backend/pricing/: __init__.py  credit_pricing.py
backend/routers/: admin_users.py  assistant.py  auth.py  briefs.py  cache.py  clients.py  communications.py  costs.py  credits.py  database.py  generator.py  health.py  metrics.py  mfa.py  posts.py  pricing.py  privacy.py  projects.py  research.py  runs.py  settings.py  stories.py  stripe_checkout.py  trends.py
backend/schemas/: __init__.py  auth.py  brief.py  client.py  costs.py  credit_schemas.py  deliverable.py  enums.py  post.py  project.py  research_schemas.py  run.py  story.py  stripe_schemas.py
backend/services/: cached_research_service.py  credit_service.py  crud.py  data_privacy_service.py  database_migrator.py  deliverable_service.py  export_service.py  generator_service.py  mfa_service.py  research_context_builder.py  research_prerequisites.py  research_service.py  schema_inspector.py  settings_service.py  story_service.py  stripe_service.py  template_prerequisites.py  token_sync_service.py  trends_service.py  web_search_factory.py
backend/tasks/: generation.py
backend/utils/: cache.py  cache_invalidation.py  cli_executor.py  error_sanitizer.py  http_rate_limiter.py  input_validators.py  metrics.py  pagination.py  password_policy.py  query_cache.py  rate_limiter.py  research_rate_limiter.py  secret_rotation.py  sse.py  web_search_validator.py
operator-dashboard/: fix-pagination-tests.py  jest.config.cjs  jest.setup.ts  openapi.json  package-lock.json  package.json  vite.config.ts
operator-dashboard/src/: App.tsx  router.tsx
operator-dashboard/test-results/: .last-run.json
src/agents/: brief_enhancer.py  brief_parser.py  brief_quality_checker.py  content_generator.py  coordinator.py  keyword_agent.py  keyword_refiner.py  memory_learning_agent.py  post_regenerator.py  qa_agent.py  question_generator.py  revision_agent.py  voice_analyzer.py
src/cli/: interactive_mode.py
src/config/: hook_frameworks.py  pricing.py  prompts.py  settings.py  template_prerequisites.py
src/models/: __init__.py  audience_research_models.py  business_report_models.py  client_brief.py  competitive_analysis_models.py  content_audit_models.py  content_calendar_models.py  content_gap_models.py  determine_competitors_models.py  market_trends_models.py  platform_strategy_models.py  post.py  posting_schedule.py  qa_report.py  quality_profile.py  seo_models.py  template.py  voice_guide.py
src/research/: audience_research.py  base.py  brand_archetype.py  business_report.py  competitive_analysis.py  content_audit.py  content_calendar_strategy.py  content_gap_analysis.py  determine_competitors.py  icp_workshop.py  market_trends_research.py  platform_strategy.py  platform_strategy.py.bak  seo_keyword_research.py  story_mining.py  voice_analysis.py
src/utils/: agent_helpers.py  analytics_tracker.py  anthropic_client.py  connection_diagnostics.py  cost_tracker.py  docx_generator.py  enhanced_response_cache.py  file_parser.py  google_maps_search.py  keyword_quality_scorer.py  logger.py  output_formatter.py  progress_stream.py  response_cache.py  schedule_generator.py  (+5 more)
tests/: conftest.py  test_models.py
(+232 files in other folders)
