[project]
name = "content-jumpstart-agent"
version = "0.1.0"
description = "AI agent for generating 30-day content packages using Anthropic Agent Framework"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    -v
    --cov=src
    --cov-report=html:htmlcov
    --cov-report=term
    --cov-report=json:coverage.json
    --cov-fail-under=90
    --cov-branch
"""
markers = [
    "requires_server: Tests that require a running HTTP server at localhost:8000",
    "integration: Integration tests",
    "unit: Unit tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
    "*/backend/*",
    "*/research/*",
    "src/research/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
warn_unreachable = false
plugins = ["pydantic.mypy"]

# Ignore SQLAlchemy model issues (declarative_base generates dynamic types)
[[tool.mypy.overrides]]
module = "backend.models.*"
ignore_errors = true

# Ignore test files and integration tests
[[tool.mypy.overrides]]
module = "backend.test_*"
ignore_errors = true

# Ignore service files with complex SQLAlchemy operations
[[tool.mypy.overrides]]
module = "backend.services.trends_service"
ignore_errors = true

# Ignore utility files with dynamic typing
[[tool.mypy.overrides]]
module = "backend.utils.error_sanitizer"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.utils.db_monitor"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.utils.caching"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.utils.auth"
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "node_modules"]
skips = ["B101", "B601", "B608", "B110"]  # Skip assert_used, shell injection, SQL f-strings, try/except/pass
